src/test/deca/context/invalid/provided/Erreur_decl.deca
//decl
{
clash x = 2;
}